Header CSS - add video - water drop img - adjust Margin

--- a/index.html
+++ b/index.html
@@ -48,16 +48,22 @@
         </figure>
 
         <!--  KeyVisual Video -->
-        <div class="KeyVisualMovie">
-            <video src="img/vid/KeyVisualMovie.mp4" autoplay muted></video>
-        </div>
-
+          <div class="videoWrapper">
+            <video autoplay loop muted>
+                <source src="img/vid/KeyVisualMovie.mp4" type="video/mp4">
+            </video>
+          </div>
     </header>
+
+    <!-- wide water drop -->
+    <picture class="wideWaterDrop">
+        <img src="img/headerWaterimg.png" alt="WideDropofWater">
+    </picture>
 
     <main>
         <!-- About セクション -->
          <section class="about_container">
-            <section id="about" class="about">
+            <section  id="about" class="about">
                 <p>ABOUT</p>
                 <ul class="about_list">
                     <li>「雨」</li>
