--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic&family=BIZ+UDMincho&family=BIZ+UDPGothic&family=BIZ+UDPMincho&family=DotGothic16&family=Hachi+Maru+Pop&family=Hina+Mincho&family=IBM+Plex+Sans+JP&family=Kaisei+Decol&family=Kaisei+Opti&family=Klee+One&family=M+PLUS+1+Code:wght@100..700&family=M+PLUS+2:wght@100..900&family=Mochiy+Pop+One&family=Murecho:wght@100..900&family=New+Tegomin&family=Rampart+One&family=RocknRoll+One&family=Yuji+Boku&family=Yuji+Mai&family=Yuji+Syuku&family=Yusei+Magic&family=Zen+Antique+Soft&family=Zen+Kaku+Gothic+Antique&family=Zen+Kaku+Gothic+New&family=Zen+Kurenaido&family=Zen+Maru+Gothic&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
-  <!-- swiper -->
+  <link href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic&family=BIZ+UDMincho&family=BIZ+UDPGothic&family=BIZ+UDPMincho&family=DotGothic16&family=Hachi+Maru+Pop&family=Hina+Mincho&family=IBM+Plex+Sans+JP&family=Kaisei+Decol&family=Kaisei+Opti&family=Klee+One&family=M+PLUS+1+Code:wght@100..700&family=M+PLUS+2:wght@100..900&family=Mochiy+Pop+One&family=Murecho:wght@100..900&family=New+Tegomin&family=Rampart+One&family=RocknRoll+One&family=Yuji+Boku&family=Yuji+Mai&family=Yuji+Syuku&family=Yusei+Magic&family=Zen+Antique+Soft&family=Zen+Kaku+Gothic+Antique&family=Zen+Kaku+Gothic+New&family=Zen+Kurenaido&family=Zen+Maru+Gothic:wght@300;400;500;700;900&family=Zen+Old+Mincho&display=swap" rel="stylesheet">  <!-- swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <!-- JQuery -->
@@ -78,7 +77,7 @@
         <p>
           <img src="img/ametabiロゴ.png" alt="雨旅ロゴ">
         </p>
-        <p>雨だからこそ、旅を通して、
+        <p class="catchCopy">雨だからこそ、旅を通して、
           <br>特別な日にしよう</p>
       </figure>
       <!--  KeyVisual Video -->
@@ -119,8 +118,8 @@
           </div>
         </div>
         <!-- 「雨」って　セクション -->
-        <h2 class="slideUpAnimation">「雨」って</h2>
-        <p class="slideUpAnimation">雨の日に気分が落ち込むことや悲しくなって、 やる気がでないこともあるが、雨の日は自分に素直になるチャンス！ これを機に自分の気持ちを受け入れよう！</p>
+        <h2>「雨」って</h2>
+        <p>雨の日に気分が落ち込むことや悲しくなって、 やる気がでないこともあるが、雨の日は自分に素直になるチャンス！ これを機に自分の気持ちを受け入れよう！</p>
         <picture>
           <img src="img/rainImg.png" alt="「雨」って写真">
         </picture>
@@ -139,8 +138,8 @@
           </div>
         </div>
         <!-- 「自然」って　セクション -->
-        <h2 class="slideUpAnimation">「自然」って</h2>
-        <p class="slideUpAnimation">自然は人の心を癒す力があり、 緑を感じることで、心が安らぎ、 リラックスできる環境をもたらす。 五感を研ぎ澄まし、感覚をより深く味わうことができる！</p>
+        <h2>「自然」って</h2>
+        <p>自然は人の心を癒す力があり、 緑を感じることで、心が安らぎ、 リラックスできる環境をもたらす。 五感を研ぎ澄まし、感覚をより深く味わうことができる！</p>
         <picture>
           <img src="img/natureImg.png" alt="「自然」って写真">
         </picture>
@@ -159,18 +158,16 @@
           </div>
         </div>
         <!-- 「旅」って　セクション -->
-        <h2 class="slideUpAnimation">「旅」って</h2>
-        <p class="slideUpAnimation">「旅」は人によって意味や定義が異なります。 旅は、「自分と向き合える」機会！自分と向き合って、 自分を受け入れながら、前向きに進むことができる！</p>
+        <h2>「旅」って</h2>
+        <p>「旅」は人によって意味や定義が異なります。 旅は、「自分と向き合える」機会！自分と向き合って、 自分を受け入れながら、前向きに進むことができる！</p>
         <picture>
           <img src="img/journeyImg.png" alt="「旅」って写真">
         </picture>
       </section>
     </section>
     <!-- About セクション -->
-
-    <!-- TripQuestとは　セクション -->
     <!-- Bg -->
-    <div class="TQ_description_outer">
+    <div class="TQ_description_outer">        
       <section class="TQ_description" id="TQ_description">
         <div class="TQ_description_inner" id="TQ_description_inner">
           <h2>TripQuestとは？</h2>
@@ -196,8 +193,8 @@
     <!-- 使い方（TQ）　セクション -->
     <section class="TQ_HowtoUse">
       <div id="HowtoUse" class="HowtoUse_Container">
-        <h2 class="slideUpAnimation">使い方</h2>
-        <p class="slideUpAnimation">How to Use</p>
+        <h2>使い方</h2>
+        <p >How to Use</p>
         <!-- Steps セクション -->
         <div class="swiper">
           <div class="swiper-wrapper">
@@ -261,7 +258,7 @@
             <h3>雨のQuest</h3>
             <div class="questList_inner">
               <!-- Quest１ -->
-              <div class="questList_btn">
+              <div class="questListBtn questList_btn">
                 <a href="#about_Q1">
                   <div class="btn-name">
                     <p>
@@ -279,9 +276,9 @@
                 </a>
               </div>
               <!-- Quest２ -->
-              <div class="questList_btn">
-                <div class="btn-name">
-                  <a href="#about_Q2">
+              <div class="questListBtn questList_btn">
+                <a href="#about_Q2">
+                  <div class="btn-name">
                     <p>
                       <strong>雨の農業を見学し、ご飯を食べよう！</strong>
                     </p>
@@ -289,15 +286,15 @@
                       <img src="img/locationPin.png" alt="locationPin">
                       <small>足立区農業公園,東京都足立区</small>
                     </p>
-                </div>
-                <!-- Arrow Down ボタン -->
-                <span>
-                  <img src="img/btn2.png" alt="雨の日に四季を感じて絵で記録せよ！へボタン">
-                </span>
+                  </div>
+                  <!-- Arrow Down ボタン -->
+                  <span>
+                    <img src="img/btn2.png" alt="雨の日に四季を感じて絵で記録せよ！へボタン">
+                  </span>
                 </a>
               </div>
               <!-- Quest３ -->
-              <div class="questList_btnQ3">
+              <div class="questListBtn questList_btnQ3">
                 <a href="#about_Q2">
                   <div class="btn-nameQ3">
                     <p>
@@ -421,7 +418,7 @@
       </h2>
       <!--　クエスト内容・体験説明  -->
       <div class="Quest_info_container">
-        <div class="quest_Description">
+        <div class="quest_Description" >
           <h3>雨の農業を見学し、
             <br>ご飯を食べよう！</h3>
           <div class="border">
@@ -613,9 +610,9 @@
       <p>Share</p>
       <!-- SNS Icons -->
       <figure class="SNS_Icons_Container">
-        <img src="img/InstaIcon.png" alt="Instagramへシェアボタン">
-        <img src="img/LINE.png" alt="LINEへシェアボタン">
-        <img src="img/X.png" alt="X（Twitter）へシェアボタン">
+        <a href=""><img src="img/InstaIcon.png" alt="Instagramへシェアボタン"></a>
+        <a href=""><img src="img/LINE.png" alt="LINEへシェアボタン"></a>
+        <a href="https://twitter.com/intent/tweet?url=[file:///Users/kaorifujita/Desktop/TripQuestLPSite/index.html]&text=雨の日をTripQuestで特別にしよう！&hashtags=TripQuest"><img src="img/X.png" alt="X（Twitter）へシェアボタン"></a>
       </figure>
     </div>
     <p>
