--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
       <figure class="SNS_Icons_Container">
         <a href=""><img src="img/InstaIcon.png" alt="Instagramへシェアボタン"></a>
         <a href=""><img src="img/LINE.png" alt="LINEへシェアボタン"></a>
-        <a href="https://twitter.com/intent/tweet?url=[file:///Users/kaorifujita/Desktop/TripQuestLPSite/index.html]&text=雨の日をTripQuestで特別にしよう！&hashtags=TripQuest"><img src="img/X.png" alt="X（Twitter）へシェアボタン"></a>
+        <a href="https://twitter.com/intent/tweet?url=https://trip-quest-henna.vercel.app/&text=雨の日をTripQuestで特別にしよう！&hashtags=TripQuest"><img src="img/X.png" alt="X（Twitter）へシェアボタン"></a>
       </figure>
     </div>
     <p>
