--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- CatchCopy -->
       <figure>
         <p>
-          <img src="img/ametabiロゴ.png" alt="雨旅ロゴ">
+          <img src="img/ametabiLogo.png" alt="雨旅ロゴ">
         </p>
         <p class="catchCopy">雨だからこそ、旅を通して、
           <br>特別な日にしよう</p>
