Ripple And Animations

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <body>
   <header>
     <section class="hamburger_Container">
-      <img src="img/TripQuestLogo.png" alt="TripQuestロゴ" id="TOP">
+      <a href="https://trip-quest.jp">
+        <img src="img/TripQuestLogo.png" alt="TripQuestロゴ" id="TOP">
+      </a>
 
       <!-- Hamburger List -->
       <div class="header__btn">
@@ -170,6 +172,9 @@
     <div class="TQ_description_outer">        
       <section class="TQ_description" id="TQ_description">
         <div class="TQ_description_inner" id="TQ_description_inner">
+          <img src="img/ripple1.svg" alt="波紋1" class="waterRipple">
+          <img src="img/ripple2.svg" alt="波紋2" class="waterRipple2">
+          <img src="img/ripple3.svg" alt="波紋3" class="waterRipple3">
           <h2>TripQuestとは？</h2>
           <p>一人旅を始めるには、不安や抵抗が多いと思いますが、</p>
           <p>TripQuestは、それらの抵抗を解消し 「一人旅」をより自由に、「楽しく」 させるためのサービスです</p>
@@ -178,10 +183,10 @@
           <!-- TripQuest本サイトに移行するボタン -->
           <div class="TQserviceBtn">
             <p>
-              <a href="#">TripQuestを体験しよう！</a>
+              <a href="https://trip-quest.jp">TripQuestを体験しよう！</a>
             </p>
             <div>
-              <a href="#">
+              <a href="https://trip-quest.jp">
                 <img src="./img/btn1.png" alt="TripQuestへ移動ボタン">
               </a>
             </div>
@@ -399,10 +404,10 @@
         <section class="TQQuestPageBtn_container">
           <div class="TQQuestPageBtn">
             <p>
-              <a href="#">Quest1を体験しよう！</a>
+              <a href="https://trip-quest.jp/quest/y2PRPA8x5Rn2ThrZ">Quest1を体験しよう！</a>
             </p>
             <div>
-              <a href="#">
+              <a href="https://trip-quest.jp/quest/y2PRPA8x5Rn2ThrZ">
                 <img src="./img/btn3.png" alt="TripQuestへ移動ボタン">
               </a>
             </div>
@@ -495,10 +500,10 @@
         <section class="TQQuestPageBtn_container">
           <div class="TQQuestPageBtn">
             <p>
-              <a href="#">Quest2を体験しよう！</a>
+              <a href="https://trip-quest.jp/quest/y2PRPA8x5Rn2ThrZ">Quest2を体験しよう！</a>
             </p>
             <div>
-              <a href="#">
+              <a href="https://trip-quest.jp/quest/y2PRPA8x5Rn2ThrZ">
                 <img src="./img/btn3.png" alt="TripQuestへ移動ボタン">
               </a>
             </div>
@@ -580,10 +585,10 @@
         <section class="TQQuestPageBtn_container">
           <div class="TQQuestPageBtn">
             <p>
-              <a href="#">Quest3を体験しよう！</a>
+              <a href="https://trip-quest.jp/quest/y2PRPA8x5Rn2ThrZ">Quest3を体験しよう！</a>
             </p>
             <div>
-              <a href="#">
+              <a href="https://trip-quest.jp/quest/y2PRPA8x5Rn2ThrZ">
                 <img src="./img/btn3.png" alt="TripQuestへ移動ボタン">
               </a>
             </div>
@@ -594,7 +599,7 @@
     <!-- Quest 3　セクション -->
     <!-- TripQuestへGo ボタン　セクション -->
     <div class="banner_Button">
-      <a href="#">
+      <a href="https://trip-quest.jp/feature-list">
         <!-- TripQuestへGo　ボタンは丸ごと画像！ -->
         <img src="img/BannerButton.png" alt="Questで明日に向かって幸せになろう！">
       </a>
@@ -610,13 +615,13 @@
       <p>Share</p>
       <!-- SNS Icons -->
       <figure class="SNS_Icons_Container">
-        <a href=""><img src="img/InstaIcon.png" alt="Instagramへシェアボタン"></a>
-        <a href=""><img src="img/LINE.png" alt="LINEへシェアボタン"></a>
+        <a href="trip-quest-henna.vercel.app"><img src="img/InstaIcon.png" alt="Instagramへシェアボタン"></a>
+        <a href="https://line.me/R/share?text=[TripQuestで雨の日を特別にしよう！trip-quest-henna.vercel.app]"><img src="img/LINE.png" alt="LINEへシェアボタン"></a>
         <a href="https://twitter.com/intent/tweet?url=https://trip-quest-henna.vercel.app/&text=雨の日をTripQuestで特別にしよう！&hashtags=TripQuest"><img src="img/X.png" alt="X（Twitter）へシェアボタン"></a>
       </figure>
     </div>
     <p>
-      <a href="#">
+      <a href="https://trip-quest.jp">
         <img src="img/TripQuestLogo.png" alt="TripQuestロゴ" class="footer_TQ_Logo">
       </a>
     </p>
