--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- script.js -->
   <script src="js/script.js" defer></script>
+  <!-- Gsap -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
 
   <title>TripQuest</title>
 </head>
@@ -242,6 +246,8 @@
                 <br>＊ユーザー登録が必要なのでご注意！</p>
             </section>
           </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
         </div>
         <!-- Steps セクション -->
       </div>
@@ -562,6 +568,7 @@
           <figure>
             <!-- img -->
             <img src="img/clearRequirement3.png" alt="Quest3クリア条件">
+            <img src="img/clover.svg" alt="四葉のクローバー" class="clover">
           </figure>
           <div class="clear_Requirement_Info">
             <p>新宿駅をスタート地点とし、新宿の公園４つを選んだら、四葉の印を散策しよう！
